# riecovest

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_examples.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
_autosummary/: riecovest.covariance_estimation.est_covariance_manifold.html  riecovest.covariance_estimation.est_gevd.html  riecovest.covariance_estimation.est_manifold_airm.html  riecovest.covariance_estimation.est_manifold_frob.html  riecovest.covariance_estimation.est_manifold_frob_whitened.html  riecovest.covariance_estimation.est_manifold_frob_whitened_by_true_noise.html  riecovest.covariance_estimation.est_manifold_tylers_m_estimator.html  riecovest.covariance_estimation.est_manifold_tylers_m_estimator_nonorm.html  riecovest.covariance_estimation.est_manifold_tylers_with_scale_opt.html  riecovest.covariance_estimation.est_manifold_wishart.html  riecovest.covariance_estimation.html  riecovest.covariance_estimation.scm.html  riecovest.covariance_estimation.tyler_estimator.html  riecovest.distance.airm.html  riecovest.distance.frob_gevd_weighted.html  riecovest.distance.frob_sq.html  riecovest.distance.frob_sq_weighted.html  riecovest.distance.html  riecovest.distance.tyler_log_likelihood.html  riecovest.distance.tyler_log_likelihood_no_normalization.html  riecovest.distance.wasserstein_distance.html  riecovest.distance.wishart_likelihood.html  riecovest.distance.wishart_log_likelihood.html  riecovest.matrix_operations.html  (+11 more)
(+84 files in other folders)
