[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["riecovest"]

[project]
name = "riecovest"
version = "0.0.1"
authors = [
    {name = "Jesper Brunnström", email = "jesper_brunnstrom@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "scipy",
    "jax",
    "pymanopt",
]

[project.urls]
Documentation = "https://sounds-research.github.io/riecovest/"
Repository = "https://github.com/SOUNDS-RESEARCH/riecovest"